# BedrockModAPI

./: .clang-format  .editorconfig  .gitignore  BUILD.md  CHANGELOG.md  CMakeLists.txt  COMPLETION_REPORT.md  CONTRIBUTING.md  FINAL_STATUS.md  FINAL_SUMMARY.txt  IMPLEMENTATION.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_FINAL.md  README_NEXT_STEPS.md  ROADMAP.md  STATUS.md  STATUS_UPDATE.md
docs/: FAQ.md  api-reference.md  finding-signatures-offsets.md  getting-started.md  quick-reference.md  versions.md
examples/: CMakeLists.txt
examples/coordinate_display/: CMakeLists.txt  main.cpp
examples/speed_boost/: main.cpp
include/bedrock/: api.h
include/bedrock/core/: events.h
include/bedrock/hooks/: hook.h
include/bedrock/memory/: memory.h  version.h
include/bedrock/rendering/: renderer.h
include/bedrock/sdk/: actor.h  clientinstance.h  level.h
lib/: README.md
mods/: .gitkeep
src/core/: api.cpp  loader.cpp  mod.cpp
src/hooks/: hook.cpp  hook_impl.cpp
src/memory/: memory.cpp  version.cpp
src/memory/offsets/: v1_21_11.h
src/memory/signatures/: v1_21_11.h
src/rendering/: renderer.cpp
src/sdk/: actor.cpp  clientinstance.cpp  level.cpp
